# src/user/user.dto.ts
@@ -1,0 +1,7 @@
+export interface IUser {
+    id: string,
+    first_name: string;
+    last_name: string;
+    email: string;
+    role: string;
+}
